Fixed song cards not wrapping

--- a/less/stylesheets/sections/main.less
+++ b/less/stylesheets/sections/main.less
@@ -384,6 +384,9 @@ sup{
   display: flex;
   padding: 4px;
   margin-top: 10px !important;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .cardTitle {
